--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <input type="text" name="" id="" placeholder="Your Name">
                 </div>
                 <div class="">
-                    <input type="email" name="" id="" placeholder="Your Email">
+                    <input type="text" name="" id="" placeholder="Your Email">
                 </div>
                 <div class="">
                     <textarea rows="10" name="" id="" placeholder="Massage"></textarea>
